--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "description": "webpack+react+es6 ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha --reporter spec",
     "webpack-dev-server": "webpack-dev-server --progress --color",
     "build": "webpack"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zhangmingkai4315/webpack-react-es6-starter.git"
   },
   "keywords": [
     "webpack",
     "react",
     "es6"
   ],
+  "bugs": {
+    "url": "https://github.com/zhangmingkai4315/webpack-react-es6-starter/issues"
+  },
+  "homepage": "https://github.com/zhangmingkai4315/webpack-react-es6-starter",
   "author": "Mike",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
@@ -30,8 +38,10 @@
     "eslint-loader": "^1.2.1",
     "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-react": "^3.16.1",
+    "expect": "^1.14.0",
     "file-loader": "^0.8.5",
     "install": "^0.4.1",
+    "mocha": "^2.4.5",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.12"
